--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "ext-curl": "*",
     "ext-json": "*",
     "php": ">=7.3",
-    "laravel/framework": "^5 || ^6 || ^7 || ^8 || ^9 || ^10"
+    "laravel/framework": "^5 || ^6 || ^7 || ^8 || ^9 || ^10 || ^12"
   },
   "type": "library",
   "license": "MIT",
